--- a/app/invitation/templates/layout.html
+++ b/app/invitation/templates/layout.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="page" dir="rtl">
 
-  	<h1>מסיבת החתונה של לרה ולאון</h1>
+  	<h1 class="invitation-header">מסיבת החתונה של לרה ולאון</h1>
   	{% block content %}{% endblock %}
 </div>
 {% endblock %}
