--- a/app/invitation/templates/show.html
+++ b/app/invitation/templates/show.html
@@ -19,7 +19,7 @@
 		{% endfor %}
 		</select>
 	</div>
+	<input type="hidden" value="{{id}}" name="invitation_id" />
 	<button type="submit">שלח</button>
 </form>
 {% endblock %}
-~                         
