--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,11 +1,11 @@
 body            { font-family: sans-serif; background: rgba(8, 208, 228, 0.52); }
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
 .page           { margin: 2em auto; width: 35em; border: 6px solid white;
                   padding: 0.8em; background: rgb(234, 222, 199) }
+.invitation-header {padding-bottom: 10px; }
 .input		{ margin-top: 5% }
 .entries        { list-style: none; margin: 0; padding: 0; }
 .entries li     { margin: 0.8em 1.2em; }
