--- a/app/templates/root.html
+++ b/app/templates/root.html
@@ -1,5 +1,20 @@
 <!doctype html>
-<title>Wedding Party</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-{% block body %}{% endblock %}
-
+<html>
+	<head>
+		<title>Wedding Party</title>
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+	</head>
+	<body>
+		<ul>
+			{% if current_user.is_authenticated %}
+			<li><a href="{{ url_for('security.logout') }}">Logout</a></li>
+			{% if current_user.has_role('admin') %}
+			<li><a href="{{ url_for('invitation.show_all') }}">Invitations</a></li>
+			{% endif %}
+			{% else %}
+				<li><a href="{{ url_for('security.login') }}">Login</a></li>
+  			{% endif %}
+		</ul>
+		{% block body %}{% endblock %}
+	</body>
+</html>
