--- a/app/invitation/templates/show_all.html
+++ b/app/invitation/templates/show_all.html
@@ -6,12 +6,13 @@
 		<tr>
 			<th>Name</th>
 			<th>Status</th>
-			<th># of Guests</th>
+			<th>Guests</th>
+			<th>Invitations</th>
 		</tr>
 	</thead>
 	<tbody>
 		{% for invitation in invitations %}
-		<tr onclick="document.location = '{{url_for('invitation.show', invitation_id=invitation.id)}}';">
+		<tr class="invitation-row" onclick="document.location = '{{url_for('invitation.show', invitation_id=invitation.id)}}';">
 				<td>{{invitation.name}}</td>
 				<td>{{invitation.status}}</td>
 				<td>{{invitation.number_of_guests}}</td>
@@ -21,8 +22,9 @@
 	<tfoot>
 		<tr>
 			<td>total</td>
-			<td>accepted</td>
+			<td></td>
 			<td>{{total_guests}}</td>
+			<td>{{total_replied_invitations}}</td>
 		</tr>
 	</tfoot>
 </table>
