--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,19 +1,103 @@
-body            { font-family: sans-serif; background: rgba(8, 208, 228, 0.52); }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h2              { font-size: 1.2em; }
+html {
+	width: 100%;
+	height: 100%;
+}
 
-.page           { margin: 2em auto; width: 35em; border: 6px solid white;
-                  padding: 0.8em; background: rgb(234, 222, 199) }
-.invitation-header {padding-bottom: 10px; }
-.input		{ margin-top: 5% }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+body {
+	font-family: sans-serif;
+	background: url("wedding.jpg") no-repeat bottom fixed; 
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+}
+
+a, h1, h2  {
+	color: #ece0e0;
+}
+
+h1, h2          {
+	font-family: 'Georgia', serif;
+	margin: 0;
+}
+
+h2              {
+	font-size: 1.2em;
+}
+
+
+.page           {
+	margin: 2em auto;
+	text-align: center;
+	color: white;
+	width: 35em;
+	padding: 0.8em;
+	background: rgba(234, 222, 199, 0.5);
+	background: radial-gradient(circle, rgba(234, 222, 199, 0.5), rgba(255,0,0,0))}
+
+.invitation-header {
+	padding-bottom: 10px;
+	text-align: center;
+}
+
+.invitation-row {
+	cursor: pointer;
+}
+
+.input		{
+margin-top: 5% }
+
+.entries        {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.entries li     {
+	margin: 0.8em 1.2em;
+}
+
+.entries li h2  {
+	margin-left: -1em;
+}
+
+.add-entry      {
+	font-size: 0.9em;
+	border-bottom: 1px solid #ccc;
+}
+
+.add-entry dl   {
+	font-weight: bold;
+}
+
+.metanav        {
+	text-align: right;
+	font-size: 0.8em;
+	padding: 0.3em;
+	margin-bottom: 1em;
+	background: #fafafa;
+}
+
+.flash {
+	background: #cee5F5;
+	padding: 0.5em;
+	border: 1px solid #aacbe2;
+}
+
+.error          {
+	background: #f0d6d6;
+	padding: 0.5em;
+}
+
+.button {
+    border: none;
+    background: #ece0e0;
+    color: rgb(79, 90, 90);
+    padding: 5px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 12px 4px 2px 2px;
+    cursor: pointer;
+}
