adding sending invitations

--- a/app/invitation/templates/success.html
+++ b/app/invitation/templates/success.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<span>Thanks you for your answer</span>
+<span>The action succeeded</span>
 {% endblock %}
