--- a/app/templates/security/email/login_instructions.html
+++ b/app/templates/security/email/login_instructions.html
@@ -1,4 +1,4 @@
-<p>{{ _('ברוך הבא %(email)s!', email=user.email) }}</p>
+<p>{{'ברוך הבא {email}!'.format( email=user.email) }}</p>
 
 <p><span>כידוע לך, הוזמנת לחתונה של לרה ולאון. כדי לאשר  את ההזמנה כנס<span>
 
