--- a/app/templates/root.html
+++ b/app/templates/root.html
@@ -5,14 +5,14 @@
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	</head>
 	<body>
-		<ul>
+		<ul class="navigation-menu">
 			{% if current_user.is_authenticated %}
-			<li><a href="{{ url_for('security.logout') }}">Logout</a></li>
+			<li class="navigation-item"><a href="{{ url_for('security.logout') }}">Logout</a></li>
 			{% if current_user.has_role('admin') %}
-			<li><a href="{{ url_for('invitation.show_all') }}">Invitations</a></li>
+			<li class="navigation-item"><a href="{{ url_for('invitation.show_all') }}">View</a></li>
 			{% endif %}
 			{% else %}
-				<li><a href="{{ url_for('security.login') }}">Login</a></li>
+				<li class="navigation-item"><a href="{{ url_for('security.login') }}">Login</a></li>
   			{% endif %}
 		</ul>
 		{% block body %}{% endblock %}
