--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -16,17 +16,17 @@ a, h1, h2  {
 	color: #ece0e0;
 }
 
-h1, h2          {
+h1, h2 {
 	font-family: 'Georgia', serif;
 	margin: 0;
 }
 
-h2              {
+h2 {
 	font-size: 1.2em;
 }
 
 
-.page           {
+.page {
 	margin: 2em auto;
 	text-align: center;
 	color: white;
@@ -44,47 +44,12 @@ h2              {
 	cursor: pointer;
 }
 
-.input		{
-margin-top: 5% }
-
-.entries        {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+.input {
+margin-top: 5%
 }
 
-.entries li     {
-	margin: 0.8em 1.2em;
-}
 
-.entries li h2  {
-	margin-left: -1em;
-}
-
-.add-entry      {
-	font-size: 0.9em;
-	border-bottom: 1px solid #ccc;
-}
-
-.add-entry dl   {
-	font-weight: bold;
-}
-
-.metanav        {
-	text-align: right;
-	font-size: 0.8em;
-	padding: 0.3em;
-	margin-bottom: 1em;
-	background: #fafafa;
-}
-
-.flash {
-	background: #cee5F5;
-	padding: 0.5em;
-	border: 1px solid #aacbe2;
-}
-
-.error          {
+.error {
 	background: #f0d6d6;
 	padding: 0.5em;
 }
