--- a/app/templates/root.html
+++ b/app/templates/root.html
@@ -12,6 +12,7 @@
 			{% if current_user.has_role('admin') %}
 			<li class="navigation-item"><a href="{{ url_for('invitation.show_all') }}">View</a></li>
 			<li class="navigation-item"><a href="{{ url_for('invitation.upload') }}">Upload</a></li>
+			<li class="navigation-item"><a href="{{ url_for('invitation.invite') }}"  onclick="return confirm('Are you sure?')" >Invite</a></li>
 			{% endif %}
 			{% else %}
 				<li class="navigation-item"><a href="{{ url_for('security.login') }}">Login</a></li>
