--- a/app/templates/security/email/login_instructions.html
+++ b/app/templates/security/email/login_instructions.html
@@ -1,7 +1,15 @@
 <p>{{'ברוך הבא {email}!'.format( email=user.email) }}</p>
 
-<p><span>כידוע לך, הוזמנת לחתונה של לרה ולאון. כדי לאשר  את ההזמנה כנס<span>
+<p><span>היי היי, תאריך החתונה שלנו מתקרב ואנחנו מתרגשים יותר מיום ליום. מאוד חשב לנו לדעת מראש האם אתם מגיעים, אנא כנסו
+<span>
 
 <a href="{{ login_link }}">{{ _('ללינק הבא') }}</a>
+כדי לאשר הגעה.
 </p>
-<p><a href="http://www.hamam.co.il/%D7%A6%D7%95%D7%A8-%D7%A7%D7%A9%D7%A8/">דרכי הגעה</a></p>
+
+<p>
+נתראה בחתונה!
+<br/>
+לרה ולאון
+</p>
+<p><a href="http://www.hamam.co.il/%D7%A6%D7%95%D7%A8-%D7%A7%D7%A9%D7%A8/">איך מגיעים?</a></p>
