--- a/app/templates/security/email/login_instructions.html
+++ b/app/templates/security/email/login_instructions.html
@@ -1,10 +1,12 @@
 <p>{{'ברוך הבא {email}!'.format( email=user.email) }}</p>
 
 <p><span>היי היי, תאריך החתונה שלנו מתקרב ואנחנו מתרגשים יותר מיום ליום. מאוד חשב לנו לדעת מראש האם אתם מגיעים, אנא כנסו
-<span>
+</span>
 
 <a href="{{ login_link }}">{{ _('ללינק הבא') }}</a>
+<span>
 כדי לאשר הגעה.
+</span>
 </p>
 
 <p>
