--- a/app/invitation/templates/going.html
+++ b/app/invitation/templates/going.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<span>איזה כיף! נפגש בתחונה!</span>
+<span>!איזה כיף! נפגש בחתונה</span>
 {% endblock %}
