fix total counts

--- a/app/invitation/templates/show_all.html
+++ b/app/invitation/templates/show_all.html
@@ -27,8 +27,8 @@
 			<tr>
 				<td>total</td>
 				<td></td>
-				<td>{{total_guests}}</td>
-				<td>{{total_replied_invitations}}</td>
+				<td>{{total_invitations_accepted}}/{{total_invitations}}</td>
+				<td>{{total_guests_accepted}}/{{total_guests}}</td>
 				<td><input type="submit" value="Invite"></td>
 			</tr>
 		</tfoot>
